--- a/views/saved.hbs
+++ b/views/saved.hbs
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="jumbotron text-center">
-        <h1>Mongo News Scraper</h1>
+        <h1>Saved Articles</h1>
       </div>
       {{#each article}}
         <div class="row">
@@ -22,7 +22,10 @@
                 <p>{{this.summary}}</p>
                 <a href="{{this.link}}">Read more at {{this.link}}</a>
                 <form class="navbar-form navbar-right" action="/saved/{{this.id}}?_method=PUT" method="post">
-                  <button type="submit" class="btn btn-default" id="savedButton">Save Article</button>
+                  <button type="submit" class="btn btn-danger" id="savedButton">Delete Article</button>
+                </form>
+                <form class="navbar-form navbar-right" action="/saved/{{this.id}}/comment" method="post">
+
                 </form>
               </div>
             </div>
